feat : Added Arean module

--- a/src/util/CMakeLists.txt
+++ b/src/util/CMakeLists.txt
@@ -2,6 +2,7 @@ add_library(
   Tskydb_util
   OBJECT
   hash.cc
+  arena.cc
 )
 set(ALL_OBJECT_FILES
   ${ALL_OBJECT_FILES} $<TARGET_OBJECTS:Tskydb_util>
