--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,10 +1,12 @@
 add_subdirectory(lrucache)
 add_subdirectory(util)
+add_subdirectory(skiplist)
 
 add_library(Tskydb STATIC ${ALL_OBJECT_FILES})
 
 set(TSKYDB_LIBS
         Tskydb_lrucache
+        Tskydb_skiplist
         Tskydb_util
         )
 
